--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
           rel="stylesheet">
+    <script src="https://kit.fontawesome.com/53c596c8c0.js" crossorigin="anonymous"></script>
     <title>Adam Sucharda - TWS SP</title>
 </head>
 <body>
@@ -39,27 +40,40 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <div class="tlacitka">
             <a href="contact.html" class="hero-btn">POKRAČOVAT</a>
-            <a href="contact.html" class="hero-btn">KONTAKTUJ NÁS</a>
+            <a href="contact.html" class="hero-btn">KONTAKT</a>
         </div>
     </div>
 </header>
-<section class="cards-container">
-    <div class="card">
-        <img src="images/merkur.png" alt="Image 1">
-        <button class="card-button">More Details</button>
+<!--<section class="cards-container">-->
+<!--    <div class="card">-->
+<!--        <img src="images/merkur.png" alt="Image 1">-->
+<!--        <button class="card-button">More Details</button>-->
+<!--    </div>-->
+<!--    <div class="card">-->
+<!--        <img src="images/merkur.png" alt="Image 2">-->
+<!--        <button class="card-button">More Details</button>-->
+<!--    </div>-->
+<!--    <div class="card">-->
+<!--        <img src="images/merkur.png" alt="Image 3">-->
+<!--        <button class="card-button">More Details</button>-->
+<!--    </div>-->
+<!--    <div class="card">-->
+<!--        <img src="images/merkur.png" alt="Image 4">-->
+<!--        <button class="card-button">More Details</button>-->
+<!--    </div>-->
+<!--</section>-->
+<section class="zahlavi">
+    <h3>O nás</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id impedit inventore iste nemo nihil.
+    </p>
+    <div class="ikony">
+        <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
+        <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter"></a>
+        <a href="https://www.youtube.com/channel/UCVq-PgGV0BRan5Fbk628GIA" class="fa-brands fa-github"></a>
+        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
     </div>
-    <div class="card">
-        <img src="images/merkur.png" alt="Image 2">
-        <button class="card-button">More Details</button>
-    </div>
-    <div class="card">
-        <img src="images/merkur.png" alt="Image 3">
-        <button class="card-button">More Details</button>
-    </div>
-    <div class="card">
-        <img src="images/merkur.png" alt="Image 4">
-        <button class="card-button">More Details</button>
-    </div>
+    <p>Made by Adam Sucharda</p>
 </section>
 <script src="./js/drop_menu.js"></script>
 </body>
