--- a/products.html
+++ b/products.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
           rel="stylesheet">
+    <script src="https://kit.fontawesome.com/53c596c8c0.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <section class="sub-header">
@@ -60,7 +61,7 @@
     </div>
     <div class="products-col">
         <img src="images/universe.jpg">
-        <h5>Zdroj: <a href="https://wallpapercave.com/" target="_blank" rel="noopener">wallpapercave.com</a></h5>
+        <h5>Zdroj: <a href="https://wallpapercave.com/" target="_blank" rel="noopener" class="odkaz">wallpapercave.com</a></h5>
     </div>
 </section>
 <hr class="line">
@@ -154,6 +155,19 @@
         </tr>
         </tbody>
     </table>
+</section>
+<section class="zahlavi">
+    <h3>O nás</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id impedit inventore iste nemo nihil.
+    </p>
+    <div class="ikony">
+        <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
+        <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter"></a>
+        <a href="https://www.youtube.com/channel/UCVq-PgGV0BRan5Fbk628GIA" class="fa-brands fa-github"></a>
+        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
+    </div>
+    <p>Made by Adam Sucharda</p>
 </section>
 <script src="./js/drop_menu.js"></script>
 </body>
