--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/53c596c8c0.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <section class="sub-header">
@@ -47,11 +48,13 @@
             <fieldset>
                 <legend>Kontaktuj nás</legend>
                 <label for="jmeno">Jméno:</label>
-                <input type="text" id="jmeno" name="jmeno" placeholder="Zadej své jméno" required><br><br>
+                <input type="text" id="jmeno" name="jmeno" required minlength="2" maxlength="50" placeholder="Zadej své jméno"><br><br>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Zadej svůj email" required><br><br>
+                <input type="email" id="email" name="email" required placeholder="Zadej svůj email"><br><br>
+                <label for="telefon">Telefon (000-000-000):</label>
+                <input type="tel" name="telefon" id="telefon" required placeholder="Zadej svůj telefon" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}"><br><br>
                 <label for="birthday">Datum narození:</label><br>
-                <input type="date" id="birthday" name="birthday" required><br><br>
+                <input type="date" id="birthday" name="birthday" required min="1900-01-01" max="2023-03-31"><br><br>
                 <label for="zprava">Zpráva:</label>
                 <textarea id="zprava" name="zprava" rows="8" placeholder="Zpráva..."
                           required></textarea><br><br>
@@ -59,6 +62,19 @@
             </fieldset>
         </form>
     </div>
+</section>
+<section class="zahlavi">
+    <h3>O nás</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id impedit inventore iste nemo nihil.
+    </p>
+    <div class="ikony">
+        <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
+        <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
+        <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter"></a>
+        <a href="https://www.youtube.com/channel/UCVq-PgGV0BRan5Fbk628GIA" class="fa-brands fa-github"></a>
+        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
+    </div>
+    <p>Made by Adam Sucharda</p>
 </section>
 <script src="./js/drop_menu.js"></script>
 </body>
