--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -16,12 +16,22 @@
 <body>
 <header>
     <div class="navbar">
-        <div class="logo"><a href="index.html">TWS SP</a></div>
+        <div class="logo">
+            <a href="index.html">TWS SP</a>
+        </div>
         <ul class="links">
-            <li><a href="index.html">DOMŮ</a></li>
-            <li><a href="#">O NÁS</a></li>
-            <li><a href="products.html">PRODUKTY</a></li>
-            <li><a href="contact.html">KONTAKT</a></li>
+            <li>
+                <a href="index.html">DOMŮ</a>
+            </li>
+            <li>
+                <a href="#">O NÁS</a>
+            </li>
+            <li>
+                <a href="products.html">PRODUKTY</a>
+            </li>
+            <li>
+                <a href="contact.html">KONTAKT</a>
+            </li>
         </ul>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a>
         <div class="toggle_btn">
@@ -29,48 +39,79 @@
         </div>
     </div>
     <div class="drop-menu">
-        <li><a href="index.html">DOMŮ</a></li>
-        <li><a href="#">O NÁS</a></li>
-        <li><a href="products.html">PRODUKTY</a></li>
-        <li><a href="contact.html">KONTAKT</a></li>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a></li>
+        <li>
+            <a href="index.html">DOMŮ</a>
+        </li>
+        <li>
+            <a href="#">O NÁS</a>
+        </li>
+        <li>
+            <a href="products.html">PRODUKTY</a>
+        </li>
+        <li>
+            <a href="contact.html">KONTAKT</a>
+        </li>
+        <li>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a>
+        </li>
     </div>
     <div class="text-box">
         <h1>Vítejte na TWS stránce</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <div class="tlacitka">
-            <a href="contact.html" class="hero-btn">POKRAČOVAT</a>
+            <a href="#cards" class="hero-btn">POKRAČOVAT</a>
             <a href="contact.html" class="hero-btn">KONTAKT</a>
         </div>
     </div>
 </header>
-<!--<section class="cards-container">-->
-<!--    <div class="card">-->
-<!--        <img src="images/merkur.png" alt="Image 1">-->
-<!--        <button class="card-button">More Details</button>-->
-<!--    </div>-->
-<!--    <div class="card">-->
-<!--        <img src="images/merkur.png" alt="Image 2">-->
-<!--        <button class="card-button">More Details</button>-->
-<!--    </div>-->
-<!--    <div class="card">-->
-<!--        <img src="images/merkur.png" alt="Image 3">-->
-<!--        <button class="card-button">More Details</button>-->
-<!--    </div>-->
-<!--    <div class="card">-->
-<!--        <img src="images/merkur.png" alt="Image 4">-->
-<!--        <button class="card-button">More Details</button>-->
-<!--    </div>-->
-<!--</section>-->
+<section class="cards-wrapper" id="cards">
+    <div class="card-grid-space">
+        <div class="num">01</div>
+        <a class="card" href="https://merkur-razors.com/?lang=en" style="--bg-img: url('/images/panet_hover.jpg')">
+            <div>
+                <h1>Merkur</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="tags">
+                    <div class="tag">MERKUR</div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="card-grid-space">
+        <div class="num">02</div>
+        <a class="card" href="https://onuniverse.com/" style="--bg-img: url('/images/planets.jpg')">
+            <div>
+                <h1>Universe</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="tags">
+                    <div class="tag">UNIVERSE</div>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="card-grid-space">
+        <div class="num">03</div>
+        <a class="card" href="https://moon.nasa.gov/" style="--bg-img: url('/images/moon.jpg')">
+            <div>
+                <h1>Moon</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="tags">
+                    <div class="tag">MOON</div>
+                </div>
+            </div>
+        </a>
+    </div>
+</section>
 <section class="zahlavi">
     <h3>O nás</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id impedit inventore iste nemo nihil.
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id
+        impedit inventore iste nemo nihil.
     </p>
     <div class="ikony">
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
         <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter"></a>
-        <a href="https://www.youtube.com/channel/UCVq-PgGV0BRan5Fbk628GIA" class="fa-brands fa-github"></a>
+        <a href="https://github.com/asuchardaa" class="fa-brands fa-github"></a>
         <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
     </div>
     <p>Made by Adam Sucharda</p>
