--- a/products.html
+++ b/products.html
@@ -164,7 +164,7 @@
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
         <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter"></a>
-        <a href="https://www.youtube.com/channel/UCVq-PgGV0BRan5Fbk628GIA" class="fa-brands fa-github"></a>
+        <a href="https://github.com/asuchardaa" class="fa-brands fa-github"></a>
         <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
     </div>
     <p>Made by Adam Sucharda</p>
