--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>TWS SP - Kontakt</title>
@@ -18,7 +18,7 @@
         <div class="logo"><a href="index.html">TWS SP</a></div>
         <ul class="links">
             <li><a href="index.html">DOMŮ</a></li>
-            <li><a href="#">O NÁS</a></li>
+            <li><a href="about-us.html">O NÁS</a></li>
             <li><a href="products.html">PRODUKTY</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
         </ul>
@@ -29,7 +29,7 @@
     </div>
     <div class="drop-menu">
         <li><a href="index.html">DOMŮ</a></li>
-        <li><a href="#">O NÁS</a></li>
+        <li><a href="about-us.html">O NÁS</a></li>
         <li><a href="products.html">PRODUKTY</a></li>
         <li><a href="contact.html">KONTAKT</a></li>
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a></li>
@@ -63,7 +63,8 @@
         </form>
     </div>
 </section>
-<section class="zahlavi">
+<hr class="line">
+<section class="zapati">
     <h3>O nás</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id impedit inventore iste nemo nihil.
     </p>
