--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="index.html">DOMŮ</a>
             </li>
             <li>
-                <a href="#">O NÁS</a>
+                <a href="about-us.html">O NÁS</a>
             </li>
             <li>
                 <a href="products.html">PRODUKTY</a>
@@ -43,7 +43,7 @@
             <a href="index.html">DOMŮ</a>
         </li>
         <li>
-            <a href="#">O NÁS</a>
+            <a href="about-us.html">O NÁS</a>
         </li>
         <li>
             <a href="products.html">PRODUKTY</a>
@@ -56,7 +56,10 @@
         </li>
     </div>
     <div class="text-box">
-        <h1>Vítejte na TWS stránce</h1>
+        <div class="grid-container">
+            <h1>Vítejte!</h1>
+            <img src="images/logo.svg" alt="logo" class="logo">
+        </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <div class="tlacitka">
             <a href="#cards" class="hero-btn">POKRAČOVAT</a>
@@ -101,8 +104,21 @@
             </div>
         </a>
     </div>
+    <div class="card-grid-space">
+        <div class="num">04</div>
+        <a class="card" href="https://moon.nasa.gov/" style="--bg-img: url('/images/zeme.png')">
+            <div>
+                <h1>Earth</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <div class="tags">
+                    <div class="tag">EARTH</div>
+                </div>
+            </div>
+        </a>
+    </div>
 </section>
-<section class="zahlavi">
+<hr class="line">
+<section class="zapati">
     <h3>O nás</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id
         impedit inventore iste nemo nihil.
