--- a/products.html
+++ b/products.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="cs">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>TWS SWP - Produkty</title>
@@ -19,7 +19,7 @@
         <div class="logo"><a href="index.html">TWS SP</a></div>
         <ul class="links">
             <li><a href="index.html">DOMŮ</a></li>
-            <li><a href="#">O NÁS</a></li>
+            <li><a href="about-us.html">O NÁS</a></li>
             <li><a href="products.html">PRODUKTY</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
         </ul>
@@ -30,7 +30,7 @@
     </div>
     <div class="drop-menu">
         <li><a href="index.html">DOMŮ</a></li>
-        <li><a href="#">O NÁS</a></li>
+        <li><a href="about-us.html">O NÁS</a></li>
         <li><a href="products.html">PRODUKTY</a></li>
         <li><a href="contact.html">KONTAKT</a></li>
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a></li>
@@ -44,7 +44,8 @@
             Alias dignissimos distinctio ea enim iste laudantium nesciunt odio pariatur quia voluptates.
             Architecto debitis dolores facilis labore laboriosam natus neque voluptate voluptatibus?
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aut blanditiis culpa d
-            gnissimos eaque eveniet fuga harum ipsam ipsum iste necessitatibus, r
+            gnissimos eaque <a href="https://www.lipsum.com/" target="_blank" rel="noopener" class=odkaz2">eveniet fuga</a> harum ipsam
+            ipsum iste necessitatibus, r
             atione repellat saepe sequi similique, tempora voluptates. Hic, mollitia!
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, autem,
             blanditiis deserunt dicta error esse expedita explicabo fuga iure magnam od
@@ -55,13 +56,14 @@
             suscipit? Dicta doloribus error eveniet explicabo illum nisi odio odit velit?
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
             eius ipsam magni perferendis placeat praesentium rerum similique voluptas.
-            Assumenda commodi c ulpa debitis explicabo, fuga iste itaque perferendis quam
+            <a href="https://loremipsum.io/" target="_blank" rel="noopener" class=odkaz2">Assumenda</a> commodi c ulpa debitis explicabo, fuga iste itaque perferendis quam
             sunt voluptas?</p>
         <a href="" class="hero-btn">ZJISTI VÍCE</a>
     </div>
     <div class="products-col">
         <img src="images/universe.jpg">
-        <h5>Zdroj: <a href="https://wallpapercave.com/" target="_blank" rel="noopener" class="odkaz">wallpapercave.com</a></h5>
+        <h5>Zdroj: <a href="https://wallpapercave.com/" target="_blank" rel="noopener"
+                      class="odkaz">wallpapercave.com</a></h5>
     </div>
 </section>
 <hr class="line">
@@ -156,9 +158,11 @@
         </tbody>
     </table>
 </section>
-<section class="zahlavi">
+<hr class="line">
+<section class="zapati">
     <h3>O nás</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id impedit inventore iste nemo nihil.
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id
+        impedit inventore iste nemo nihil.
     </p>
     <div class="ikony">
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
