--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="index.html">DOMŮ</a>
             </li>
             <li>
-                <a href="about-us.html">O NÁS</a>
+                <a href="galery.html">GALERIE</a>
             </li>
             <li>
                 <a href="products.html">PRODUKTY</a>
@@ -43,7 +43,7 @@
             <a href="index.html">DOMŮ</a>
         </li>
         <li>
-            <a href="about-us.html">O NÁS</a>
+            <a href="galery.html">GALERIE</a>
         </li>
         <li>
             <a href="products.html">PRODUKTY</a>
@@ -130,7 +130,7 @@
         <a href="https://github.com/asuchardaa" class="fa-brands fa-github"></a>
         <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
     </div>
-    <p>Made by Adam Sucharda</p>
+    <p>© 2023 Adam Sucharda</p>
 </section>
 <script src="./js/drop_menu.js"></script>
 </body>
