--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
         <div class="logo"><a href="index.html">TWS SP</a></div>
         <ul class="links">
             <li><a href="index.html">DOMŮ</a></li>
-            <li><a href="about-us.html">O NÁS</a></li>
+            <li><a href="galery.html">GALERIE</a></li>
             <li><a href="products.html">PRODUKTY</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
         </ul>
@@ -30,7 +30,7 @@
     </div>
     <div class="drop-menu">
         <li><a href="index.html">DOMŮ</a></li>
-        <li><a href="about-us.html">O NÁS</a></li>
+        <li><a href="galery.html">GALERIE</a></li>
         <li><a href="products.html">PRODUKTY</a></li>
         <li><a href="contact.html">KONTAKT</a></li>
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a></li>
@@ -171,7 +171,7 @@
         <a href="https://github.com/asuchardaa" class="fa-brands fa-github"></a>
         <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
     </div>
-    <p>Made by Adam Sucharda</p>
+    <p>© 2023 Adam Sucharda</p>
 </section>
 <script src="./js/drop_menu.js"></script>
 </body>
