--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
           rel="stylesheet">
@@ -24,7 +20,7 @@
                 <a href="index.html">DOMŮ</a>
             </li>
             <li>
-                <a href="galery.html">GALERIE</a>
+                <a href="gallery.html">GALERIE</a>
             </li>
             <li>
                 <a href="products.html">PRODUKTY</a>
@@ -44,7 +40,7 @@
                 <a href="index.html">DOMŮ</a>
             </li>
             <li>
-                <a href="galery.html">GALERIE</a>
+                <a href="gallery.html">GALERIE</a>
             </li>
             <li>
                 <a href="products.html">PRODUKTY</a>
@@ -74,7 +70,7 @@
         <div class="num">01</div>
         <a class="card" href="https://merkur-razors.com/?lang=en" style="--bg-img: url('/images/panet_hover.jpg')">
             <div>
-                <h1>Merkur</h1>
+                <h2>Merkur</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <div class="tags">
                     <div class="tag">MERKUR</div>
@@ -86,7 +82,7 @@
         <div class="num">02</div>
         <a class="card" href="https://onuniverse.com/" style="--bg-img: url('/images/planets.jpg')">
             <div>
-                <h1>Universe</h1>
+                <h2>Universe</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <div class="tags">
                     <div class="tag">UNIVERSE</div>
@@ -98,7 +94,7 @@
         <div class="num">03</div>
         <a class="card" href="https://moon.nasa.gov/" style="--bg-img: url('/images/moon.jpg')">
             <div>
-                <h1>Moon</h1>
+                <h2>Moon</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <div class="tags">
                     <div class="tag">MOON</div>
@@ -110,7 +106,7 @@
         <div class="num">04</div>
         <a class="card" href="https://moon.nasa.gov/" style="--bg-img: url('/images/zeme.png')">
             <div>
-                <h1>Earth</h1>
+                <h2>Earth</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 <div class="tags">
                     <div class="tag">EARTH</div>
@@ -122,9 +118,7 @@
 <hr class="line">
 <section class="zapati">
     <h3>O nás</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id
-        impedit inventore iste nemo nihil.
-    </p>
+    <p><a href="http://jigsaw.w3.org/css-validator/check/referer" class="odkaz2">ODKAZ NA VALIDACI CSS</a> & <a href="#" class="odkaz2">ODKAZ NA VALIDACI HTML</a></p>
     <div class="ikony">
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
