--- a/gallery.html
+++ b/gallery.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TWS SP - O nás</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
           rel="stylesheet">
@@ -19,7 +15,7 @@
         <div class="logo"><a href="index.html">TWS SP</a></div>
         <ul class="links">
             <li><a href="index.html">DOMŮ</a></li>
-            <li><a href="galery.html">GALERIE</a></li>
+            <li><a href="gallery.html">GALERIE</a></li>
             <li><a href="products.html">PRODUKTY</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
         </ul>
@@ -29,37 +25,26 @@
         </div>
     </div>
     <div class="drop-menu">
-        <li><a href="index.html">DOMŮ</a></li>
-        <li><a href="galery.html">GALERIE</a></li>
-        <li><a href="products.html">PRODUKTY</a></li>
-        <li><a href="contact.html">KONTAKT</a></li>
-        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a></li>
+        <ul>
+            <li>
+                <a href="index.html">DOMŮ</a>
+            </li>
+            <li>
+                <a href="gallery.html">GALERIE</a>
+            </li>
+            <li>
+                <a href="products.html">PRODUKTY</a>
+            </li>
+            <li>
+                <a href="contact.html">KONTAKT</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a>
+            </li>
+        </ul>
     </div>
-    <h1>O nás</h1>
+    <h1>Galerie</h1>
 </section>
-<!--<section class="galery">-->
-<!--    <h1>Naše galerie</h1>-->
-<!--    <div class="galery-grid">-->
-<!--        <figure>-->
-<!--            <video width="640" height="480" controls>-->
-<!--                <source src="videos/universe.mp4" type="video/mp4">-->
-<!--                <source src="videos/universe.ogg" type="video/ogg">-->
-<!--                Your browser does not support the video tag.-->
-<!--            </video>-->
-<!--            <figcaption>Pohled na zeměkouli z vesmíru</figcaption>-->
-<!--        </figure>-->
-<!--        <figure>-->
-<!--            <img src="images/merkur.png" alt="Image 1">-->
-<!--            <figcaption>-->
-<!--                <audio controls>-->
-<!--                    <source src="audio/03%20-%20Somewhere%20I%20Belong.mp3" type="audio/mpeg">-->
-<!--                    <source src="audio/03%20-%20Somewhere%20I%20Belong.ogg" type="audio/ogg">-->
-<!--                    Your browser does not support the audio element.-->
-<!--                </audio>-->
-<!--            </figcaption>-->
-<!--        </figure>-->
-<!--    </div>-->
-<!--</section>-->
 <section class="gallery">
     <h1>Naše galerie</h1>
     <div class="gallery-grid">
