--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 <hr class="line">
 <section class="zapati">
     <h3>O nás</h3>
-    <p><a href="http://jigsaw.w3.org/css-validator/validator?lang=cs&profile=css3svg&uri=https%3A%2F%2Fasuchardaa.github.io%2F&usermedium=all&vextwarning=&warning=1" class="odkaz2">ODKAZ NA VALIDACI CSS</a> & <a href="#" class="odkaz2">ODKAZ NA VALIDACI HTML</a></p>
+    <p>
+        <a href="http://jigsaw.w3.org/css-validator/validator?lang=cs&profile=css3svg&uri=https%3A%2F%2Fasuchardaa.github.io%2F&usermedium=all&vextwarning=&warning=1"
+           target="_blank" rel="noopener" class="odkaz2">ODKAZ NA VALIDACI CSS</a> & <a href="https://html5.validator.nu/?doc=https%3A%2F%2Fasuchardaa.github.io%2Findex.html" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA
+        VALIDACI HTML</a></p>
     <div class="ikony">
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
         <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
