--- a/products.html
+++ b/products.html
@@ -171,8 +171,9 @@
 <hr class="line">
 <section class="zapati">
     <h3>O nás</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet delectus eius esse ex expedita explicabo id
-        impedit inventore iste nemo nihil.
+    <p><a href="https://html5.validator.nu/?doc=https%3A%2F%2Fasuchardaa.github.io%2Fproducts.html" target="_blank"
+          rel="noopener" class="odkaz2">ODKAZ NA
+        VALIDACI HTML</a>
     </p>
     <div class="ikony">
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
