--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <a href="contact.html">KONTAKT</a>
             </li>
         </ul>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné tlačítko</a>
         <div class="toggle_btn">
-            <i class="fa-solid fa-bars"></i>
+            <span class="fa-solid fa-bars"></span>
         </div>
     </div>
     <div class="drop-menu">
@@ -49,7 +49,7 @@
                 <a href="contact.html">KONTAKT</a>
             </li>
             <li>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="action_btn">Kouzelné tlačítko</a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné tlačítko</a>
             </li>
         </ul>
     </div>
@@ -123,11 +123,11 @@
            target="_blank" rel="noopener" class="odkaz2">ODKAZ NA VALIDACI CSS</a> & <a href="https://html5.validator.nu/?doc=https%3A%2F%2Fasuchardaa.github.io%2Findex.html" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA
         VALIDACI HTML</a> & <a href="#" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA AUDIT WCAG</a></p>
     <div class="ikony">
-        <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook"></a>
-        <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram"></a>
-        <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter"></a>
-        <a href="https://github.com/asuchardaa" class="fa-brands fa-github"></a>
-        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"></a>
+        <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook" aria-label="Facebook"></a>
+        <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram" aria-label="Instagram"></a>
+        <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter" aria-label="Twitter"></a>
+        <a href="https://github.com/asuchardaa" class="fa-brands fa-github" aria-label="Github"></a>
+        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify" aria-label="Spotify"></a>
     </div>
     <p>© 2023 Adam Sucharda</p>
 </section>
