--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </ul>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné tlačítko</a>
         <div class="toggle_btn">
-            <i class="fa-solid fa-bars"></i>
+            <span class="fa-solid fa-bars"></span>
         </div>
     </div>
     <div class="drop-menu">
