--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,7 @@
         </ul>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné tlačítko</a>
         <div class="toggle_btn">
-            <i class="fa-solid fa-bars"></i>
+            <span class="fa-solid fa-bars"></span>
         </div>
     </div>
     <div class="drop-menu">
@@ -46,7 +46,7 @@
     <h1>Galerie</h1>
 </section>
 <section class="gallery">
-    <h1>Naše galerie</h1>
+    <h2>Naše galerie</h2>
     <div class="gallery-grid">
         <div class="gallery-column">
             <figure>
