--- a/products.html
+++ b/products.html
@@ -19,9 +19,10 @@
             <li><a href="products.html">PRODUKTY</a></li>
             <li><a href="contact.html">KONTAKT</a></li>
         </ul>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné tlačítko</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné
+            tlačítko</a>
         <div class="toggle_btn">
-            <i class="fa-solid fa-bars"></i>
+            <span class="fa-solid fa-bars"></span>
         </div>
     </div>
     <div class="drop-menu">
@@ -39,7 +40,8 @@
                 <a href="contact.html">KONTAKT</a>
             </li>
             <li>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné tlačítko</a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener" class="action_btn">Kouzelné
+                    tlačítko</a>
             </li>
         </ul>
     </div>
@@ -47,7 +49,7 @@
 </section>
 <section class="products-text">
     <div class="products-col">
-        <h1>Seznam našich produktů</h1>
+        <h2>Seznam našich produktů</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Alias dignissimos distinctio ea enim iste laudantium nesciunt odio pariatur quia voluptates.
             Architecto debitis dolores facilis labore laboriosam natus neque voluptate voluptatibus?
@@ -132,10 +134,10 @@
         <caption>Seznam účastníků</caption>
         <thead>
         <tr>
-            <th rowspan="2">Organizace Účastníků</th>
-            <th colspan="2">5.A</th>
-            <th rowspan="2">Učitelé</th>
-            <th colspan="2">5.B</th>
+            <th rowspan="2" id="org-header" scope="row">Organizace Účastníků</th>
+            <th colspan="2" scope="col">5.A</th>
+            <th rowspan="2" scope="row">Učitelé</th>
+            <th colspan="2" scope="col">5.B</th>
         </tr>
         <tr>
             <th>Muži</th>
@@ -180,7 +182,8 @@
         <a href="https://www.instagram.com/adam.sucharda/" class="fa fa-instagram" aria-label="Instagram"></a>
         <a href="https://twitter.com/Adam_Sucharda" class="fa fa-twitter" aria-label="Twitter"></a>
         <a href="https://github.com/asuchardaa" class="fa-brands fa-github" aria-label="Github"></a>
-        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify" aria-label="Spotify"></a>
+        <a href="https://open.spotify.com/user/21g355ayvqjnkl7lgkx3t6o4a" class="fa fa-spotify"
+           aria-label="Spotify"></a>
     </div>
     <p>© 2023 Adam Sucharda</p>
 </section>
