--- a/gallery.html
+++ b/gallery.html
@@ -94,7 +94,7 @@
 <section class="zapati">
     <h3>O nás</h3>
     <p><a href="https://html5.validator.nu/?doc=https%3A%2F%2Fasuchardaa.github.io%2Fgallery.html" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA
-        VALIDACI HTML</a>
+        VALIDACI HTML</a> & <a href="#" target="_blank" rel="noopener" class="odkaz2">ODKAZ NA AUDIT WCAG</a>
     </p>
     <div class="ikony">
         <a href="https://www.facebook.com/Adaamekk/" class="fa fa-facebook" aria-label="Facebook"></a>
