--- a/products.html
+++ b/products.html
@@ -129,7 +129,7 @@
 </section>
 <hr class="line">
 <section class="tabulka">
-    <h2>Tabulka</h2>
+    <h4>Tabulka</h4>
     <table>
         <caption>Seznam účastníků</caption>
         <thead>
@@ -140,32 +140,32 @@
             <th colspan="2" scope="col">5.B</th>
         </tr>
         <tr>
-            <th>Muži</th>
-            <th>Ženy</th>
-            <th>Muži</th>
-            <th>Ženy</th>
+            <th scope="col">Muži</th>
+            <th scope="col">Ženy</th>
+            <th scope="col">Muži</th>
+            <th scope="col">Ženy</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <th rowspan="2">Jídlo</th>
-            <td>Ano</td>
-            <td>Ne</td>
-            <td rowspan="2">Ano</td>
-            <td>Ano</td>
-            <td>Neznámé</td>
+            <th rowspan="2" scope="row">Jídlo</th>
+            <td headers="org-header">Ano</td>
+            <td headers="org-header">Ne</td>
+            <td rowspan="2" scope="row">Ano</td>
+            <td headers="org-header">Ano</td>
+            <td headers="org-header">Neznámé</td>
         </tr>
         <tr>
-            <td colspan="2">Pouze vegetariánské</td>
-            <td colspan="2">Dvojité porce</td>
+            <td colspan="2" headers="org-header">Pouze vegetariánské</td>
+            <td colspan="2" headers="org-header">Dvojité porce</td>
         </tr>
         <tr>
-            <th>Ubytování</th>
-            <td>Ano</td>
-            <td>Ano</td>
-            <td>Ne</td>
-            <td>Ne</td>
-            <td>Ne</td>
+            <th scope="row">Ubytování</th>
+            <td headers="org-header">Ano</td>
+            <td headers="org-header">Ano</td>
+            <td headers="org-header">Ne</td>
+            <td headers="org-header">Ne</td>
+            <td headers="org-header">Ne</td>
         </tr>
         </tbody>
     </table>
