--- a/products.html
+++ b/products.html
@@ -151,7 +151,7 @@
             <th rowspan="2" scope="row">Jídlo</th>
             <td headers="org-header">Ano</td>
             <td headers="org-header">Ne</td>
-            <td rowspan="2" scope="row">Ano</td>
+            <td rowspan="2">Ano</td>
             <td headers="org-header">Ano</td>
             <td headers="org-header">Neznámé</td>
         </tr>
