--- a/products.html
+++ b/products.html
@@ -70,7 +70,7 @@
             <a href="https://loremipsum.io/" target="_blank" rel="noopener" class="odkaz2">Assumenda</a> commodi c ulpa
             debitis explicabo, fuga iste itaque perferendis quam
             sunt voluptas?</p>
-        <a href="" class="hero-btn">ZJISTI VÍCE</a>
+        <a href="./gallery.html" class="hero-btn">ZJISTI VÍCE</a>
     </div>
     <div class="products-col">
         <img src="./images/universe.jpg" alt="universe image">
